--- a/config/content.htm
+++ b/config/content.htm
@@ -825,8 +825,24 @@ def main():
       
 if __name__ == "__main__":
     main()</pre>
-<p></p>
-<h1>NX</h1>
+<h2>w11 任務</h2>
+<h4>解決協同設計流程中的倉儲衝突</h4>
+<p>當各組學員對組長帳號下的分組倉儲具備協同管理權限後, 各學員可以 git 採非同步協同設計, 對組長帳號下的分組倉儲進行改版, 其間不免要設法以手動方式解決 config/content.htm 動態超文件中的衝突.</p>
+<p>以下影片就是利用動態網頁系統中的 Search 與 Edit All 設法找出帶有衝突起點、中線與衝突終點的超文件範圍, 然後根據協同設計整體需求解決衝突後, 新增、提交並推送新版本.</p>
+<script>
+var winkVideoData_resolve_conflict = {
+  dataVersion: 1,
+  frameRate: 10,
+  buttonFrameLength: 5,
+  buttonFrameOffset: 2,
+  frameStops: {
+  },
+};
+</script>
+<!-- 接下來將 mp4 檔案從 downloads 目錄取出 -->
+<div class="winkVideoContainerClass"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="/static" data-varname="winkVideoData_resolve_conflict" height="630" muted="true" width="1008">
+<source src="/downloads/w11_ajax/w11_resolve_conflict.mp4" type="video/mp4"/></video></div>
+<p>至於各學員帳號下 fork 的分組倉儲, 則可以透過逆向 Pull Requests 設法與組長帳號下的分組倉儲保持同步, 並設定 Github Pages 呈現各組員帳號下的分組倉儲靜態網頁.</p><h1>NX</h1>
 <p>多重啟動可攜程式與 NX:</p>
 <p>將各 NX 版本的啟動整合至不同的 start.bat 檔案中.</p>
 <p><img alt="" class="add_border" height="315" src="/images/multiple_nx_startup.png" width="300"/></p>
