--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -82,8 +82,7 @@ var winkVideoData = {
 </p>
 <!-- 接下來將 mp4 檔案從 downloads 目錄取出 -->
 <div class="winkVideoContainerClass"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="/static" data-varname="winkVideoData" height="630" muted="true" width="1008">
-<source src="/downloads/w5_template/w5_template.mp4" type="video/mp4"/></video>
-</div>
+<source src="/downloads/w5_template/w5_template.mp4" type="video/mp4"/></video></div>
 <h2>Grouping</h2>
 <p><a href="https://mde.tw/cd2022">cd2022</a> 課程由學員自行分組, 每四人為一小組, 每兩小組組成一大組.</p>
 <p>所有課程指定內容可由各小組組員討論 (每週至少開會一次, 且將小組討論過程與結論放入各小組分組倉儲) 後, 在個人所負責的項目執行完成後, 先納入個人 cd2022 倉儲後, 再依照組序整合至該小組組長的協同倉儲 (例如: 甲班第一大組的第一小組倉儲名稱將為: cd2022ag1-1, 甲班第一大組的第二小組倉儲名稱將為: cd2022ag1-2).</p>
@@ -122,8 +121,7 @@ var winkVideoData = {
 </p>
 <!-- 接下來將 mp4 檔案從 downloads 目錄取出 -->
 <div class="winkVideoContainerClass"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="/static" data-varname="winkVideoData" height="630" muted="true" width="1008">
-<source src="/downloads/2a_w3_studlist_pull_requests.mp4" type="video/mp4"/></video>
-</div>
+<source src="/downloads/2a_w3_studlist_pull_requests.mp4" type="video/mp4"/></video></div>
 <p>以下影片說明如何透過逆向 Pull Requests 讓各學員帳號下的分組倉儲與組長帳號下的協同倉儲內容保持同步:</p>
 <p>
 <script>
@@ -142,8 +140,7 @@ var winkVideoData2 = {
 </p>
 <!-- 接下來將 mp4 檔案從 downloads 目錄取出 -->
 <div class="winkVideoContainerClass"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="/static" data-varname="winkVideoData2" height="630" muted="true" width="1008">
-<source src="/downloads/w5_pull_request/w5_pull_request.mp4" type="video/mp4"/></video>
-</div>
+<source src="/downloads/w5_pull_request/w5_pull_request.mp4" type="video/mp4"/></video></div>
 <h2>Revealjs</h2>
 <p><a href="https://revealjs.com/">https://revealjs.com/</a> 是一個 Javascript 程式框架, 可用來建立全球資訊網上的簡報.</p>
 <p>將 reveal.js 納入分組倉儲的真正目的, 是能直接在統一的 GitHub 提交推送過程中, 持續查核各組員對於協同產品開發流程的貢獻度.</p>
@@ -178,8 +175,7 @@ var winkVideoData = {
 </p>
 <!-- 接下來將 mp4 檔案從 downloads 目錄取出 -->
 <div class="winkVideoContainerClass"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="/static" data-varname="winkVideoData" height="630" muted="true" width="1008">
-<source src="/downloads/w5_reveal/w5_reveal.mp4" type="video/mp4"/></video>
-</div>
+<source src="/downloads/w5_reveal/w5_reveal.mp4" type="video/mp4"/></video></div>
 <p>以下影片說明如何利用 Leo Editor 編輯 config/pelican.leo 網誌檔案:</p>
 <p>
 <script>
@@ -195,8 +191,7 @@ var winkVideoData2 = {
 </p>
 <!-- 接下來將 mp4 檔案從 downloads 目錄取出 -->
 <div class="winkVideoContainerClass"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="/static" data-varname="winkVideoData2" height="630" muted="true" width="1008">
-<source src="/downloads/w6_blog/w6_blog.mp4" type="video/mp4"/></video>
-</div>
+<source src="/downloads/w6_blog/w6_blog.mp4" type="video/mp4"/></video></div>
 <h2>Meeting</h2>
 <p><a href="https://www.atlassian.com/blog/teamwork/how-to-run-effective-meetings">https://www.atlassian.com/blog/teamwork/how-to-run-effective-meetings</a></p>
 <p style="padding-left: 30px;">Most of us don’t have formal training in meeting management skills, but anyone can learn to do it well – whether your team is in the office, fully virtual, or hybrid.</p>
@@ -230,10 +225,11 @@ var winkVideoData2 = {
 <p><a href="https://tug.org/tugboat/tb42-1/tb130knuth-tuneup21.pdf">The TeX tuneup of 2021</a></p>
 <p>XeLaTeX means using the LaTeX macro package with the XeTeX engine.</p>
 <p>LuaLaTeX means using the LaTeX macro package with the LuaTeX engine.</p>
-<p style="padding-left: 30px;"><a href="https://www.luatex.org/">https://www.luatex.org</a> </p>
-<p><a href="https://www.tug.org/texlive/">https://www.tug.org/texlive/</a> </p>
-<p><a href="https://miktex.org/">https://miktex.org/</a> </p>
-<p></p><h1>Assignments</h1>
+<p style="padding-left: 30px;"><a href="https://www.luatex.org/">https://www.luatex.org</a></p>
+<p><a href="https://www.tug.org/texlive/">https://www.tug.org/texlive/</a></p>
+<p><a href="https://miktex.org/">https://miktex.org/</a></p>
+<p></p>
+<h1>Assignments</h1>
 <p>協同產品設計實習課程學員評分要點:</p>
 <p>sustainable (可持續使用, 永續):</p>
 <p style="padding-left: 30px;">1 : capable of being sustained (可持續)</p>
@@ -317,8 +313,7 @@ var winkVideoData2 = {
 </p>
 <!-- 接下來將 mp4 檔案從 downloads 目錄取出 -->
 <div class="winkVideoContainerClass"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="/static" data-varname="winkVideoData2" height="630" muted="true" width="1008">
-<source src="/downloads/w6_blog/w6_blog.mp4" type="video/mp4"/></video>
-</div>
+<source src="/downloads/w6_blog/w6_blog.mp4" type="video/mp4"/></video></div>
 <h2>w7 任務</h2>
 <p><a href="https://mde.tw/cd2022_guide/content/Brython.html?src=https://gist.githubusercontent.com/mdecourse/e00a3b68d4defee1987d18cc998b377a/raw/07fc8d08e6738f91f7f8042ff48385b4e10436bf/w7_a_summary.py">2a w7 summary 查驗</a> (<a href="/downloads/w7_project/w7_a_summary.txt">2a 有網誌者</a>)</p>
 <p><a href="https://mde.tw/cd2022_guide/content/Brython?src=https://gist.githubusercontent.com/mdecourse/e00a3b68d4defee1987d18cc998b377a/raw/faffe2bd308016216ce19de21c38a6e33ea33a1f/w7_b_summary.py">2b w7 summary 查驗</a> (<a href="/downloads/w7_project/w7_b_summary.txt">2b 有網誌者</a>)</p>
@@ -356,8 +351,7 @@ var winkVideoData = {
 </p>
 <!-- 接下來將 mp4 檔案從 downloads 目錄取出 -->
 <div class="winkVideoContainerClass"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="/static" data-varname="winkVideoData" height="630" muted="true" width="1008">
-<source src="/downloads/w7_pap/w7_pap.mp4" type="video/mp4"/></video>
-</div>
+<source src="/downloads/w7_pap/w7_pap.mp4" type="video/mp4"/></video></div>
 <h3>w7_summary</h3>
 <p><a href="https://mde.tw/cd2022_guide/content/Brython.html?src=https://gist.githubusercontent.com/mdecourse/e00a3b68d4defee1987d18cc998b377a/raw/07fc8d08e6738f91f7f8042ff48385b4e10436bf/w7_a_summary.py">2a w7 summary 查驗</a> (<a href="/downloads/w7_project/w7_a_summary.txt">2a 有網誌者</a>)</p>
 <p><a href="https://mde.tw/cd2022_guide/content/Brython?src=https://gist.githubusercontent.com/mdecourse/e00a3b68d4defee1987d18cc998b377a/raw/faffe2bd308016216ce19de21c38a6e33ea33a1f/w7_b_summary.py">2b w7 summary 查驗</a> (<a href="/downloads/w7_project/w7_b_summary.txt">2b 有網誌者</a>)</p>
@@ -486,8 +480,7 @@ var winkVideoData_gear_design = {
 </p>
 <!-- 接下來將 mp4 檔案從 downloads 目錄取出 -->
 <div class="winkVideoContainerClass"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="/static" data-varname="winkVideoData_gear_design" height="630" muted="true" width="1008">
-<source src="/downloads/w8_midterm/w9_gear_design.mp4" type="video/mp4"/></video>
-</div>
+<source src="/downloads/w8_midterm/w9_gear_design.mp4" type="video/mp4"/></video></div>
 <p>除了使用上述 NX UGOpen C 的 gear.c 協助正齒輪的設計繪圖外, 也可以利用 NX12 版之後系統自帶的 \UGOPEN\SNAP\examples\More Examples\Gear\Gear.vb.</p>
 <h3>Block UI Styler</h3>
 <p>Application -&gt; Gateway -&gt; More -&gt; Block UI Styler</p>
@@ -495,6 +488,7 @@ var winkVideoData_gear_design = {
 <p><a href="https://docs.sw.siemens.com/en-US/product/209349590/doc/PL20200507135732916.blockstyler/html/intro_int_ov_bl">NX1953 Block UI Styler Documentation</a></p>
 <p>利用 Block UI Styler 建立表單, 用來控制 block.prt 零件的長寬與高: <a href="/downloads/block_ui.7z">block_ui.7z</a> (NX2008 零件檔案)</p>
 <p style="padding-left: 30px;">操作方法: 以 NX2008 開啟 block.prt, 利用 Menu -&gt; Tools -&gt; Journal -&gt; Play 執行 length_width_height.py, 待出現方塊長度、寬度與高度的設定表單後, 填入所需尺寸後, 按下 Ok, 零件即可依照設定修改尺寸. 此為利用 Block UI Styler 所製作的互動式零件參數設定. 若將表單移置網誌 Brython 前端, 則可依相同方式設定 Server 上的 NX2008 零組件檔案的設計參數.</p>
+<p>
 <script>
 var winkVideoData_block_ui_modified_expressions = {
   dataVersion: 1,
@@ -505,6 +499,7 @@ var winkVideoData_block_ui_modified_expressions = {
   },
 };
 </script>
+</p>
 <!-- 接下來將 mp4 檔案從 downloads 目錄取出 -->
 <div class="winkVideoContainerClass"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="/static" data-varname="winkVideoData_block_ui_modified_expressions" height="600px" muted="true" width="800px">
 <source src="/downloads/nxopen\block_ui\block_ui_modified_expressions.mp4" type="video/mp4"/></video></div>
@@ -657,6 +652,7 @@ var winkVideoData_w10_block_ui = {
 &lt;!-- 將 mp4 檔案從 downloads 目錄取出 --&gt;
 &lt;div class="winkVideoContainerClass" style="border: thin solid black; padding: 10px;"&gt;&lt;video width="100%" height="100%" autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="/static" data-varname="winkVideoData_w10_block_ui" muted="true"&gt;
 &lt;source src="/downloads/w10_block_ui/w10_block_ui.mp4" type="video/mp4" /&gt;&lt;/video&gt;&lt;/div&gt;</pre>
+<p>
 <script>
 var winkVideoData_w10_block_ui = {
   dataVersion: 1,
@@ -667,10 +663,12 @@ var winkVideoData_w10_block_ui = {
   },
 };
 </script>
+</p>
 <!-- 接下來將 mp4 檔案從 downloads 目錄取出 -->
 <div class="winkVideoContainerClass" style="border: thin solid black; padding: 10px;"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="/static" data-varname="winkVideoData_w10_block_ui" height="100%" muted="true" width="100%">
 <source src="/downloads/w10_block_ui/w10_block_ui.mp4" type="video/mp4"/></video></div>
 <p>w10_nx_integ</p>
+<p>
 <script>
 var winkVideoData_w10_nx_integ = {
   dataVersion: 1,
@@ -681,10 +679,12 @@ var winkVideoData_w10_nx_integ = {
   },
 };
 </script>
+</p>
 <!-- 接下來將 mp4 檔案從 downloads 目錄取出 -->
 <div class="winkVideoContainerClass" style="border: thin solid black; padding: 10px;"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="/static" data-varname="winkVideoData_w10_nx_integ" height="100%" muted="true" width="100%">
 <source src="/downloads/w10_nx_integ/w10_nx_integ.mp4" type="video/mp4"/></video></div>
 <p>w10_ssh</p>
+<p>
 <script>
 var winkVideoData_w10_ssh = {
   dataVersion: 1,
@@ -695,9 +695,11 @@ var winkVideoData_w10_ssh = {
   },
 };
 </script>
+</p>
 <!-- 接下來將 mp4 檔案從 downloads 目錄取出 -->
 <div class="winkVideoContainerClass" style="border: thin solid black; padding: 10px;"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="/static" data-varname="winkVideoData_w10_ssh" height="100%" muted="true" width="100%">
-<source src="/downloads/w10_ssh/w10_ssh.mp4" type="video/mp4"/></video></div><h3>run_journal</h3>
+<source src="/downloads/w10_ssh/w10_ssh.mp4" type="video/mp4"/></video></div>
+<h3>run_journal</h3>
 <p>若以 NXOpen Python API 為例, 可以安排將 AJAX 送進 Server 的設計變數存為檔案, 然後由 run_journal.exe 執行的 Python 程式讀進設計變數後, 驅動 NX12、NX1980 或 NX2008 後將結果透過 URL 傳回前端瀏覽器端.</p>
 <p>run_journal.exe help:</p>
 <pre class="brush:js;auto-links:false;toolbar:false" contenteditable="false">Usage: run_journal [ -pim ] [ -r=&lt;filename&gt;[,lang=&lt;lang&gt;][,format=&lt;format&gt;] ] [ -profile ] [ -allow_redo ] &lt;journal-file&gt; [ -args .... ]
@@ -823,7 +825,24 @@ def main():
       
 if __name__ == "__main__":
     main()</pre>
-<p></p><h1>NX</h1>
+<h2>w11 任務</h2>
+<h4>解決協同設計流程中的倉儲衝突</h4>
+<p>當各組學員對組長帳號下的分組倉儲具備協同管理權限後, 各學員可以 git 採非同步協同設計, 對組長帳號下的分組倉儲進行改版, 其間不免要設法以手動方式解決 config/content.htm 動態超文件中的衝突.</p>
+<p>以下影片就是利用動態網頁系統中的 Search 與 Edit All 設法找出帶有衝突起點、中線與衝突終點的超文件範圍, 然後根據協同設計整體需求解決衝突後, 新增、提交並推送新版本.</p>
+<script>
+var winkVideoData_resolve_conflict = {
+  dataVersion: 1,
+  frameRate: 10,
+  buttonFrameLength: 5,
+  buttonFrameOffset: 2,
+  frameStops: {
+  },
+};
+</script>
+<!-- 接下來將 mp4 檔案從 downloads 目錄取出 -->
+<div class="winkVideoContainerClass" style="border: thin solid black; padding: 10px;"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="/static" data-varname="winkVideoData_resolve_conflict" height="630" muted="true" width="1008">
+<source src="/downloads/w11_ajax/w11_resolve_conflict.mp4" type="video/mp4"/></video></div>
+<p>至於各學員帳號下 fork 的分組倉儲, 則可以透過逆向 Pull Requests 設法與組長帳號下的分組倉儲保持同步, 並設定 Github Pages 呈現各組員帳號下的分組倉儲靜態網頁.</p><h1>NX</h1>
 <p>多重啟動可攜程式與 NX:</p>
 <p>將各 NX 版本的啟動整合至不同的 start.bat 檔案中.</p>
 <p><img alt="" class="add_border" height="315" src="/images/multiple_nx_startup.png" width="300"/></p>
@@ -839,7 +858,8 @@ if __name__ == "__main__":
 <p><a href="https://www.plm.automation.siemens.com/global/en/products/nx/nx-for-design.html">https://www.plm.automation.siemens.com/global/en/products/nx/nx-for-design.html</a></p>
 <p><a href="https://en.wikipedia.org/wiki/Siemens_NX">https://en.wikipedia.org/wiki/Siemens_NX</a></p>
 <p><a href="http://toolnotes.com/home/engineering-graphics/siemens-nx-topics/nx-tutorials-version-1855/">View Commands</a> (<a href="https://www.youtube.com/watch?v=GUaa97tALxE">Video</a>):</p>
-<p style="padding-left: 30px;">Zoom in and out<br/>    (roll mouse wheel)<br/>    MB2<br/>3D Orbit<br/>    (move mouse while holding in middle mouse wheel)<br/>    MB2<br/>Pan<br/>    (move mouse and right click button)<br/>    MB2 + MB3<br/>Twist view<br/>    MB2 + Slide along edges of screen<br/>Align view<br/>    F8</p><h2>NX3</h2>
+<p style="padding-left: 30px;">Zoom in and out<br/>    (roll mouse wheel)<br/>    MB2<br/>3D Orbit<br/>    (move mouse while holding in middle mouse wheel)<br/>    MB2<br/>Pan<br/>    (move mouse and right click button)<br/>    MB2 + MB3<br/>Twist view<br/>    MB2 + Slide along edges of screen<br/>Align view<br/>    F8</p>
+<h2>NX3</h2>
 <p><a href="http://wcm.cycu.org:88/nx3doc/index.html">NX3 Document</a> (for internal use only)</p>
 <p>因為 NX 從 NX10 之後才支援 NXOpen for Python, 在 NX3 環境希望利用 Python 編寫延伸程式, 可以透過 UGOpen C 將延伸程式編譯為 Python 可以呼叫執行的動態連結程式庫, 然後間接透過 Python 驅動 NX3 的零組件延伸應用.</p>
 <p>相關說明位於: <a href="https://github.com/mdecycu/cd2022_guide/tree/main/downloads/nx3_c_pyd">https://github.com/mdecycu/cd2022_guide/tree/main/downloads/nx3_c_pyd</a> (2004 年採用 <a href="https://netbeans.apache.org/">Netbean</a> 作為 IDE)</p>
@@ -1123,8 +1143,8 @@ var winkVideoData = {
 </p>
 <!-- 接下來將 mp4 檔案從 downloads 目錄取出 -->
 <div class="winkVideoContainerClass"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="/static" data-varname="winkVideoData" height="630" muted="true" width="1008">
-<source src="/downloads/w5_portable_nx1980/w5_portable_nx1980.mp4" type="video/mp4"/></video>
-</div><h3>NX1980_setup</h3>
+<source src="/downloads/w5_portable_nx1980/w5_portable_nx1980.mp4" type="video/mp4"/></video></div>
+<h3>NX1980_setup</h3>
 <p>以下影片說明如何設定 Journal 存檔格式, 關閉 Product Execellence Program, 並查驗版本與授權使用單位:</p>
 <p><a href="/downloads/w5_nx_api/w5_nx_api.txt">w5_nx_api.txt</a></p>
 <p>
@@ -1141,17 +1161,11 @@ var winkVideoData = {
 </p>
 <!-- 接下來將 mp4 檔案從 downloads 目錄取出 -->
 <div class="winkVideoContainerClass"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="/static" data-varname="winkVideoData" height="630" muted="true" width="1008">
-<source src="/downloads/w5_nx_api/w5_nx_api.mp4" type="video/mp4"/></video>
-</div>
-&lt;&lt;&lt;&lt;&lt;&lt;&lt; HEAD
-<div class="winkVideoPlayOverlayClass"></div>
+<source src="/downloads/w5_nx_api/w5_nx_api.mp4" type="video/mp4"/></video></div>
 <h3>NXOpen</h3>
 <p>Python 範例: UGOPEN\SampleNXOpenApplications\Python</p>
 <p><a href="https://docs.plm.automation.siemens.com/tdoc/nx/12/nx_api#uid:xid1162445:index_nxopen_prog_guide">NXOpen Programmer's Guide</a> (NX12)</p>
-<p><a href="https://docs.plm.automation.siemens.com/data_services/resources/nx/12/nx_api/custom/en_US/nxopen_python_ref/index.html">NXOpen for Python Reference Guide</a> (NX12)</p>
-=======
-<h3>NXOpen</h3>
-&gt;&gt;&gt;&gt;&gt;&gt;&gt; 58e0eb982fc898fa1c2d9690820b0dd664aeae1a
+<p><a href="https://docs.plm.automation.siemens.com/data_services/resources/nx/12/nx_api/custom/en_US/nxopen_python_ref/index.html">NXOpen for Python Reference Guide</a> (NX12</p>
 <p><a href="/downloads/NXOpen_spur_gear.c">NXOpen_spur_gear.c</a></p>
 <p><a href="https://docs.plm.automation.siemens.com/data_services/resources/nx/1872/nx_api/common/en_US/graphics/fileLibrary/nx/nxopen/NXOpen_Getting_Started.pdf">Get Started with NXOpen.pdf</a> (2019)</p>
 <p>NX10: <a href="https://docs.plm.automation.siemens.com/data_services/resources/nx/10/nx_api/en_US/custom/nxopen_python_ref/index.html">https://docs.plm.automation.siemens.com/data_services/resources/nx/10/nx_api/en_US/custom/nxopen_python_ref/index.html</a></p>
@@ -1312,7 +1326,8 @@ if __name__ == '__main__':
     main()
 </pre>
 <p>Tools -&gt; Expressions 可以列出所有 Expressions</p>
-<p>在零件繪製過程若將關鍵尺寸以 Expressions 變數命名後, 透過 Python API 進行操控, 並利用 Flask 讓該 Python 程式網際化, 之後再交由前端的 Brython 表單輸入所需要的零組件變數值, 由 AJAX 傳至後端將該零組件轉為 STL 或 STEP 格式後提供下載. 且將客製化後之零組件 PMI 資訊直接顯示在 Brython 前端. 將有助於提升各階段協同產品設計流程效益.</p><h3>AJAX</h3>
+<p>在零件繪製過程若將關鍵尺寸以 Expressions 變數命名後, 透過 Python API 進行操控, 並利用 Flask 讓該 Python 程式網際化, 之後再交由前端的 Brython 表單輸入所需要的零組件變數值, 由 AJAX 傳至後端將該零組件轉為 STL 或 STEP 格式後提供下載. 且將客製化後之零組件 PMI 資訊直接顯示在 Brython 前端. 將有助於提升各階段協同產品設計流程效益.</p>
+<h3>AJAX</h3>
 <p>可以將下列 Server 端的 Flask 程式透過 NXOpen Python API 與 NX12、NX1980 或 NX2008 相連, 然後將 uarm 機械手臂所需要的零組件參數, 由 Brython 端輸入, 執行後的結果再傳回網際前端應用.</p>
 <p>Client 端的 Brython:</p>
 <pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false"># 從 browser 導入 document
