--- a/content/w11 任務.html
+++ b/content/w11 任務.html
@@ -139,14 +139,24 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">Tic-Tat-Toe << <a href='Tic-Tat-Toe.html'>Previous</a> <a href='run.html'>Next</a> >> run<br /><h1>Threejs</h1>
-<p>假如能夠在 server 端配置 NX + Flask 延伸應用程式, 並讓 Brython 前端程式操控產品設計參數, 完成後的零組件將可在轉為 OBJ 格式後, 直接展示在客戶端的瀏覽器中.</p>
-<p><a href="https://jayconsystems.com/blog/exporting-3d-files-stl-vs-obj-vs-iges-vs-step">https://jayconsystems.com/blog/exporting-3d-files-stl-vs-obj-vs-iges-vs-step</a></p>
-<p><a href="https://threejs.org/">https://threejs.org/</a></p>
-<p><iframe frameborder="0" height="300" src="./../downloads/threejs_ex/index.html" width="300"></iframe></p>
-<p><iframe frameborder="0" height="300" src="./../downloads/threejs_ex/ex1/asm.html" width="300"></iframe></p>
-<p><a href="https://www.coppeliarobotics.com/helpFiles/en/externalFrontEnd.htm">https://www.coppeliarobotics.com/helpFiles/en/externalFrontEnd.htm</a></p>
-<br />Tic-Tat-Toe << <a href='Tic-Tat-Toe.html'>Previous</a> <a href='run.html'>Next</a> >> run</div>
+    <div id="tipue_search_content">run_journal << <a href='run_journal.html'>Previous</a> <a href='NX.html'>Next</a> >> NX<br /><h1>w11 任務</h1>
+<h4>解決協同設計流程中的倉儲衝突</h4>
+<p>當各組學員對組長帳號下的分組倉儲具備協同管理權限後, 各學員可以 git 採非同步協同設計, 對組長帳號下的分組倉儲進行改版, 其間不免要設法以手動方式解決 config/content.htm 動態超文件中的衝突.</p>
+<p>以下影片就是利用動態網頁系統中的 Search 與 Edit All 設法找出帶有衝突起點、中線與衝突終點的超文件範圍, 然後根據協同設計整體需求解決衝突後, 新增、提交並推送新版本.</p>
+<script>
+var winkVideoData_resolve_conflict = {
+  dataVersion: 1,
+  frameRate: 10,
+  buttonFrameLength: 5,
+  buttonFrameOffset: 2,
+  frameStops: {
+  },
+};
+</script>
+<!-- 接下來將 mp4 檔案從 downloads 目錄取出 -->
+<div class="winkVideoContainerClass"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="./../cmsimde/static" data-varname="winkVideoData_resolve_conflict" height="630" muted="true" width="1008">
+<source src="./../downloads/w11_ajax/w11_resolve_conflict.mp4" type="video/mp4"/></video></div>
+<p>至於各學員帳號下 fork 的分組倉儲, 則可以透過逆向 Pull Requests 設法與組長帳號下的分組倉儲保持同步, 並設定 Github Pages 呈現各組員帳號下的分組倉儲靜態網頁.</p><br />run_journal << <a href='run_journal.html'>Previous</a> <a href='NX.html'>Next</a> >> NX</div>
         
     <!-- footer -->
       <div class="container">
